force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmCorrectRetirementAge__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCorrectRetirementAge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Confirm correct retirement age</label>
    <type>Checkbox</type>
</CustomField>