force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmDeck4EyeComplete__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDeck4EyeComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Once you mark this as complete the following task will generate in Salesforce for the suitability planner: Resolve 4 eye comments</inlineHelpText>
    <label>Confirm deck 4 eye complete</label>
    <type>Checkbox</type>
</CustomField>