force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmedInDeckInitialFee__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedInDeckInitialFee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>New clients only: the initial fee should be confirmed on the &apos;What will it cost initially?&apos; slide, which will also specify from which wrapper(s) it will be taken from.Ensure this matches the &apos;Initial/ongoing charges&apos; section of the narrative.
New &amp; existing clients:if there are transfer fees applicable, these should also be confirmed on the &quot;What will it cost initially?&apos; slide, specifying which products the transfer fees will apply to.Ensure no transfer fees apply to cash based products or small products</inlineHelpText>
    <label>Confirmed in deck (initial fee)</label>
    <type>Checkbox</type>
</CustomField>