force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmedInDeckOngoingFee__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedInDeckOngoingFee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>New &amp; existing clients: the ongoing fee should be confirmed on the &apos;What will it cost?&apos; slide.</inlineHelpText>
    <label>Confirmed in deck (ongoing fee)</label>
    <type>Checkbox</type>
</CustomField>