force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmIllustrationFeesLookCorrect__c.field-meta.xml
<CustomField>
    <fullName>ConfirmIllustrationFeesLookCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Confirm fees look correct in illustration produced. (Match fee calculator with illustration fee, product fees are correct, investment fees look correct)</inlineHelpText>
    <label>Confirm illustration fees look correct</label>
    <type>Checkbox</type>
</CustomField>