force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmLifelineReadyFor4Eye__c.field-meta.xml
<CustomField>
    <fullName>ConfirmLifelineReadyFor4Eye__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Once you mark this as complete the following task will generate in Salesforce for planner queue: Four eye Voyant scenarios</inlineHelpText>
    <label>Confirm lifeline ready for 4 eye</label>
    <type>Checkbox</type>
</CustomField>