force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmPortfolioOfEachClient__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPortfolioOfEachClient__c</fullName>
    <description>Use this field to outline the recommended portfolio including justification, per client and also per wrapper</description>
    <inlineHelpText>Use this field to outline the recommended portfolio including justification, per client and also per wrapper</inlineHelpText>
    <label>Confirm portfolio of each client</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>