force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmTimelineReadyFor4Eye__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTimelineReadyFor4Eye__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Once you mark this as complete the following task will generate in Salesforce for planner queue: Confirm Timeline ready for 4eye</inlineHelpText>
    <label>Confirm timeline ready for 4 eye</label>
    <type>Checkbox</type>
</CustomField>