force-app/main/default/objects/AdviceChecklist__c/fields/ConflictsOfInterestNotes__c.field-meta.xml
<CustomField>
    <fullName>ConflictsOfInterestNotes__c</fullName>
    <description>Ensure the adviser has added this to household facts &amp; conflicts register where appropriate, and note how this is being managed. E.g. employees of NW, family members of NW employees, friends, Octopus shareholders etc.</description>
    <inlineHelpText>Ensure the adviser has added this to household facts &amp; conflicts register where appropriate, and note how this is being managed. E.g. employees of NW, family members of NW employees, friends, Octopus shareholders etc.</inlineHelpText>
    <label>Notes on conflicts of interest</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>