force-app/main/default/objects/AdviceChecklist__c/fields/ConvertVoyantOutputsToCharts__c.field-meta.xml
<CustomField>
    <fullName>ConvertVoyantOutputsToCharts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Convert Voyant outputs to charts</label>
    <type>Checkbox</type>
</CustomField>