force-app/main/default/objects/AdviceChecklist__c/fields/CopyOfRtqSavedToGdrive__c.field-meta.xml
<CustomField>
    <fullName>CopyOfRtqSavedToGdrive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>RTQ Saved To G-Drive?</label>
    <type>Checkbox</type>
</CustomField>