force-app/main/default/objects/AdviceChecklist__c/fields/CriticalYieldAnnuityQuotes_linked__c.field-meta.xml
<CustomField>
    <fullName>CriticalYieldAnnuityQuotes_linked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Critical yield &amp; annuity quotes linked in Salesforce?</inlineHelpText>
    <label>Critical Yield &amp; Annuity Quotes Linked?</label>
    <type>Checkbox</type>
</CustomField>