force-app/main/default/objects/AdviceChecklist__c/fields/CurrentAssets_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>CurrentAssets_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>