force-app/main/default/objects/AdviceChecklist__c/fields/CurrentAssets_SfSnapshotTaken__c.field-meta.xml
<CustomField>
    <fullName>CurrentAssets_SfSnapshotTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Snapshot taken?</label>
    <type>Checkbox</type>
</CustomField>