force-app/main/default/objects/AdviceChecklist__c/fields/CurrentAssetsGettingTheBalanceRight__c.field-meta.xml
<CustomField>
    <fullName>CurrentAssetsGettingTheBalanceRight__c</fullName>
    <description>Link to relevant tab on suitability builder</description>
    <inlineHelpText>Link to relevant tab on suitability builder</inlineHelpText>
    <label>Getting the balance right tool</label>
    <type>Url</type>
</CustomField>