force-app/main/default/objects/AdviceChecklist__c/fields/CurrentAssetsMovingMoneyAround__c.field-meta.xml
<CustomField>
    <fullName>CurrentAssetsMovingMoneyAround__c</fullName>
    <description>Unused</description>
    <inlineHelpText>Link to relevant tab on suitability builder</inlineHelpText>
    <label>Moving money around tool</label>
    <type>Url</type>
</CustomField>