force-app/main/default/objects/AdviceChecklist__c/fields/Deck4EyeCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>Deck4EyeCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unused</description>
    <label>Deck 4 eye completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>