force-app/main/default/objects/AdviceChecklist__c/fields/DeckReadyFor4Eyes__c.field-meta.xml
<CustomField>
    <fullName>DeckReadyFor4Eyes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To mark this as complete, please use the confirm advice deck complete button. Once you mark this as complete the following task will generate in Salesforce for the planner queue: Four eye Suitability Deck</inlineHelpText>
    <label>Deck Ready For 4 Eyes</label>
    <type>Checkbox</type>
</CustomField>