force-app/main/default/objects/AdviceChecklist__c/fields/DeckReviewed__c.field-meta.xml
<CustomField>
    <fullName>DeckReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked to record task completion</description>
    <label>Deck reviewed</label>
    <type>Checkbox</type>
</CustomField>