force-app/main/default/objects/AdviceChecklist__c/fields/DeleteAppendicesThatAreNotRequired__c.field-meta.xml
<CustomField>
    <fullName>DeleteAppendicesThatAreNotRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Ensure that relevant key risks slides and appendices remain. Delete any that aren&apos;t relevant.</inlineHelpText>
    <label>Delete appendices that are not required</label>
    <type>Checkbox</type>
</CustomField>