force-app/main/default/objects/AdviceChecklist__c/fields/DeleteLinksToKfdsAndPlatformTcs__c.field-meta.xml
<CustomField>
    <fullName>DeleteLinksToKfdsAndPlatformTcs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Delete links to KFD&apos;s and platform T&amp;C&apos;s that are not required from &apos;Key Features Documents &amp; Personalised Illustrations&apos; slide in the appendix.</inlineHelpText>
    <label>Delete links to KFD&apos;s and platform T&amp;C&apos;s</label>
    <type>Checkbox</type>
</CustomField>