force-app/main/default/objects/AdviceChecklist__c/fields/DeleteSlidesThatAreNotRequired__c.field-meta.xml
<CustomField>
    <fullName>DeleteSlidesThatAreNotRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Slides That Are Not Required</label>
    <type>Checkbox</type>
</CustomField>