force-app/main/default/objects/AdviceChecklist__c/fields/DetailFeesRecommendedAssetsTransfer__c.field-meta.xml
<CustomField>
    <fullName>DetailFeesRecommendedAssetsTransfer__c</fullName>
    <description>Unused</description>
    <inlineHelpText>Detail all fees for the recommended transfer of assets</inlineHelpText>
    <label>Detail fees for transfers</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>