force-app/main/default/objects/AdviceChecklist__c/fields/DetailsOfMedicalDisclosures__c.field-meta.xml
<CustomField>
    <fullName>DetailsOfMedicalDisclosures__c</fullName>
    <description>Used for protection advice</description>
    <label>Details of medical disclosures</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>