force-app/main/default/objects/AdviceChecklist__c/fields/DidTheClientAcceptAdviceInFull__c.field-meta.xml
<CustomField>
    <fullName>DidTheClientAcceptAdviceInFull__c</fullName>
    <description>Indicates level of client acceptance</description>
    <inlineHelpText>If an addendum is required, mark this question as &#39;No’</inlineHelpText>
    <label>Did the client accept advice in full?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>