force-app/main/default/objects/AdviceChecklist__c/fields/DiscoNotesCompletedBySpecialist__c.field-meta.xml
<CustomField>
    <fullName>DiscoNotesCompletedBySpecialist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Discovery meeting recording notes - Confirm completed by specialist</inlineHelpText>
    <label>Disco notes completed by specialist?</label>
    <type>Checkbox</type>
</CustomField>