force-app/main/default/objects/AdviceChecklist__c/fields/DiscoNotesReviewedInDetail__c.field-meta.xml
<CustomField>
    <fullName>DiscoNotesReviewedInDetail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to confirm task completion</description>
    <inlineHelpText>New clients: read discovery meeting notes and facts in full. Existing clients: refer to facts.</inlineHelpText>
    <label>Disco notes reviewed in detail?</label>
    <type>Checkbox</type>
</CustomField>