force-app/main/default/objects/AdviceChecklist__c/fields/EmailOi__c.field-meta.xml
<CustomField>
    <fullName>EmailOi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email OI</label>
    <type>Checkbox</type>
</CustomField>