force-app/main/default/objects/AdviceChecklist__c/fields/EnsureDateMatchesDateOfTheMeeting__c.field-meta.xml
<CustomField>
    <fullName>EnsureDateMatchesDateOfTheMeeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Refer to &#39;Send Dropbox Email&#39; task description.</inlineHelpText>
    <label>Ensure date matches date of the meeting</label>
    <type>Checkbox</type>
</CustomField>