force-app/main/default/objects/AdviceChecklist__c/fields/ExpectedOiDiscounts__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOiDiscounts__c</fullName>
    <description>Description of any OI discounts</description>
    <inlineHelpText>e.g. VCT loyalty discount / friends &amp; family discount / early bird discount</inlineHelpText>
    <label>Are there any expected OI discounts?</label>
    <type>TextArea</type>
</CustomField>