force-app/main/default/objects/AdviceChecklist__c/fields/Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Expenditure__c</fullName>
    <description>Use unclear</description>
    <label>Expenditure</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>