force-app/main/default/objects/AdviceChecklist__c/fields/ExpenditureCheck__c.field-meta.xml
<CustomField>
    <fullName>ExpenditureCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use unclear</description>
    <label>Expenditure</label>
    <type>Checkbox</type>
</CustomField>