force-app/main/default/objects/AdviceChecklist__c/fields/ExplainChangesToTheInitialNarrative__c.field-meta.xml
<CustomField>
    <fullName>ExplainChangesToTheInitialNarrative__c</fullName>
    <description>Use this field to summarise changes you&#39;ve made to the narrative folllowing the partner review. Any changes should be made within the narrative itself (i.e. you should overwrite where applicable). You can also outline here why you&#39;ve not made a change suggested in the partner review plus your reasoning.</description>
    <inlineHelpText>Use this field to summarise changes you&#39;ve made to the narrative folllowing the partner review. Any changes should be made within the narrative itself (i.e. you should overwrite where applicable). You can also outline here why you&#39;ve not made a change suggested in the partner review plus your reasoning.</inlineHelpText>
    <label>Explain changes to the initial narrative</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>