force-app/main/default/objects/AdviceChecklist__c/fields/Formatting__c.field-meta.xml
<CustomField>
    <fullName>Formatting__c</fullName>
    <description>Unused</description>
    <inlineHelpText>E.g. positioning, colours, sizing, current formatting (i.e. if taken from a previous deck)</inlineHelpText>
    <label>Formatting (colours, positioning etc.)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>