force-app/main/default/objects/AdviceChecklist__c/fields/FourEyeComments__c.field-meta.xml
<CustomField>
    <fullName>FourEyeComments__c</fullName>
    <inlineHelpText>Add summary of 4eye check of calculations, e.g. all good, comments added etc.</inlineHelpText>
    <label>4 eye comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>