force-app/main/default/objects/AdviceChecklist__c/fields/FourEyeCommentsResolved__c.field-meta.xml
<CustomField>
    <fullName>FourEyeCommentsResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records completion of resolution of four eye comments</description>
    <inlineHelpText>Once you mark this as complete the following task will generate in Salesforce for the partner: Partner Suitability review</inlineHelpText>
    <label>4 eye comments resolved</label>
    <type>Checkbox</type>
</CustomField>