force-app/main/default/objects/AdviceChecklist__c/fields/FourEyeLifelineComments__c.field-meta.xml
<CustomField>
    <fullName>FourEyeLifelineComments__c</fullName>
    <inlineHelpText>Review plans on Voyant and comment here on the changes/amendments needed. This should reflect the Voyant assumptions document/key assumptions within the deck and the assumptions section within the narrative. Any best practices should also be noted, e.g. event names that don&#39;t need to appear on the Lifeline.</inlineHelpText>
    <label>4 Eye Lifeline Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>