force-app/main/default/objects/AdviceChecklist__c/fields/FourEyeTimelineComments__c.field-meta.xml
<CustomField>
    <fullName>FourEyeTimelineComments__c</fullName>
    <description>Indicates completion of peer review of timeline</description>
    <inlineHelpText>Review plans on Timeline and comment here on the changes/amendments needed. This should reflect the Timeline assumptions document/key assumptions within the deck and the assumptions section within the narrative. Any best practices should also be noted.</inlineHelpText>
    <label>4 eye timeline comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>