force-app/main/default/objects/AdviceChecklist__c/fields/FulfilmentFormsCompleted__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentFormsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once ticked, the advice checklist will move to a status of Advice Meeting Debrief (Partner)</inlineHelpText>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>