force-app/main/default/objects/AdviceChecklist__c/fields/GoalsObjectives__c.field-meta.xml
<CustomField>
    <fullName>GoalsObjectives__c</fullName>
    <description>Unused</description>
    <label>Goals/objectives</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>