force-app/main/default/objects/AdviceChecklist__c/fields/GuideForDrawdownIllustrations__c.field-meta.xml
<CustomField>
    <fullName>GuideForDrawdownIllustrations__c</fullName>
    <defaultValue>&quot;https://docs.google.com/document/d/1AFZ1-YyYMiS6_A6CxPlYjxJpFEeYhDAp1gawBbNs1Dg/edit&quot;</defaultValue>
    <description>Unused</description>
    <label>Guide for drawdown illustrations</label>
    <type>Url</type>
</CustomField>