force-app/main/default/objects/AdviceChecklist__c/fields/HaveYouSavedAppFormsToGdrive__c.field-meta.xml
<CustomField>
    <fullName>HaveYouSavedAppFormsToGdrive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>All relevant forms should be saved to the advice folder &gt; &apos;New business - App forms&apos;. These include the Hubwise transfer forms and any relevant ceding provider forms.</inlineHelpText>
    <label>Have you saved app. forms to Gdrive?</label>
    <type>Checkbox</type>
</CustomField>