force-app/main/default/objects/AdviceChecklist__c/fields/HaveYouSavedIllustrationsToGdrive__c.field-meta.xml
<CustomField>
    <fullName>HaveYouSavedIllustrationsToGdrive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>All illustrations should be saved to the advice folder &gt; &#39;New business - illustrations&#39;. A copy should be made and saved to the Portal Documents folder on Gdrive.</inlineHelpText>
    <label>Have you saved illustrations to Gdrive?</label>
    <type>Checkbox</type>
</CustomField>