force-app/main/default/objects/AdviceChecklist__c/fields/HeadOfCompliance4EyeChangesComments__c.field-meta.xml
<CustomField>
    <fullName>HeadOfCompliance4EyeChangesComments__c</fullName>
    <inlineHelpText>Suitability planner should use this box to summarise discussion with Head of Compliance (Andrew McMillan).</inlineHelpText>
    <label>Head Of Compliance 4eye Changes/Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>