force-app/main/default/objects/AdviceChecklist__c/fields/HeadPlannerApproved__c.field-meta.xml
<CustomField>
    <fullName>HeadPlannerApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Head planner approved</label>
    <type>Checkbox</type>
</CustomField>