force-app/main/default/objects/AdviceChecklist__c/fields/HealthConditionsMightAffectCover__c.field-meta.xml
<CustomField>
    <fullName>HealthConditionsMightAffectCover__c</fullName>
    <description>Used for protection advice</description>
    <inlineHelpText>Did the client disclose any health conditions or medical details that might affect cover?</inlineHelpText>
    <label>Health conditions, might affect cover?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>