force-app/main/default/objects/AdviceChecklist__c/fields/HowClientAccumulatedWealth__c.field-meta.xml
<CustomField>
    <fullName>HowClientAccumulatedWealth__c</fullName>
    <description>How has the client accumulated their wealth? Is the client&apos;s wealth commensurate with their story and the evidence? Check profile (household and person accounts), e.g. for salary, bonus, options, inheritances etc. Obtain evidence for non standard sources, e.g. property completion statement/bank statement. We should ensure we have this evidence on file prior to the advice meeting. Where there are AML concerns, refer to head of compliance immediately. Refer to AML policy guide for additional information.</description>
    <inlineHelpText>How has the client accumulated their wealth? Is the client&apos;s wealth commensurate with their story and the evidence? Check profile (household and person accounts), e.g. for salary, bonus, options, inheritances etc. Obtain evidence for non standard sources, e.g. property completion statement/bank statement. We should ensure we have this evidence on file prior to the advice meeting. Where there are AML concerns, refer to head of compliance immediately. Refer to AML policy guide for additional information.</inlineHelpText>
    <label>Source of wealth?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>