force-app/main/default/objects/AdviceChecklist__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <description>Use unclear</description>
    <label>Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>