force-app/main/default/objects/AdviceChecklist__c/fields/IncomeCheck__c.field-meta.xml
<CustomField>
    <fullName>IncomeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use unclear</description>
    <label>Income</label>
    <type>Checkbox</type>
</CustomField>