force-app/main/default/objects/AdviceChecklist__c/fields/InvestmentReviewAdvice__c.field-meta.xml
<CustomField>
    <fullName>InvestmentReviewAdvice__c</fullName>
    <description>This section should be used to outline the review of and subsequent recommendations for clients&apos; existing investments.

You should also confirm: penalties or guarantees, ongoing contributions, CGT calculations, total charges vs NOVA, can adviser charging be added, investment options, current equity content e.g. c90%, costs to sell funds/transfer, other factors. Include EIS/VCT &amp; direct shares (RSUs etc).</description>
    <inlineHelpText>This section should be used to outline the review of and subsequent recommendations for clients&apos; existing investments.

You should also confirm: penalties or guarantees, ongoing contributions, CGT calculations, total charges vs NOVA, can adviser charging be added, investment options, current equity content e.g. c90%, costs to sell funds/transfer, other factors. Include EIS/VCT &amp; direct shares (RSUs etc).</inlineHelpText>
    <label>Investment review advice</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>