force-app/main/default/objects/AdviceChecklist__c/fields/IsDrawdownIllustrationRequired__c.field-meta.xml
<CustomField>
    <fullName>IsDrawdownIllustrationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to drive flow orchestration task choices</description>
    <inlineHelpText>This should be requested for existing or new drawdown (including transferring crystallised benefits, regardless if they&apos;re going to be taking additional income).</inlineHelpText>
    <label>Is a drawdown illustration required?</label>
    <type>Checkbox</type>
</CustomField>