force-app/main/default/objects/AdviceChecklist__c/fields/IsLifelineRequired__c.field-meta.xml
<CustomField>
    <fullName>IsLifelineRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to drive orchestration task automation</description>
    <label>Is a Lifeline required?</label>
    <type>Checkbox</type>
</CustomField>