force-app/main/default/objects/AdviceChecklist__c/fields/JustificationForSelection__c.field-meta.xml
<CustomField>
    <fullName>JustificationForSelection__c</fullName>
    <description>Justify selection of portfolio for client</description>
    <label>Justification for selection</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>