force-app/main/default/objects/AdviceChecklist__c/fields/JustifyCapacityForLoss__c.field-meta.xml
<CustomField>
    <fullName>JustifyCapacityForLoss__c</fullName>
    <description>Outline justification for capacity for loss assessment, referring to &quot;assessing your risk profile&quot; standard deck content and personalising to client circumstances. Format should be positive &amp; negative bullet points. Guidance can be found in planner manual (Risk profiles &gt; risk profile considerations/assessment).</description>
    <inlineHelpText>Outline justification for capacity for loss assessment, referring to &quot;assessing your risk profile&quot; standard deck content and personalising to client circumstances. Format should be positive &amp; negative bullet points. Guidance can be found in planner manual (Risk profiles &gt; risk profile considerations/assessment).</inlineHelpText>
    <label>Justify capacity for loss</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>