force-app/main/default/objects/AdviceChecklist__c/fields/JustifyResistanceToCatastrophe__c.field-meta.xml
<CustomField>
    <fullName>JustifyResistanceToCatastrophe__c</fullName>
    <description>Outline justification for resistance to catastrophe assessment, referring to &quot;assessing your risk profile&quot; standard deck content and personalising to client circumstances. Format should be positive &amp; negative bullet points. Guidance can be found in planner manual (Risk profiles &gt; risk profile considerations/assessment).</description>
    <inlineHelpText>Outline justification for resistance to catastrophe assessment, referring to &quot;assessing your risk profile&quot; standard deck content and personalising to client circumstances. Format should be positive &amp; negative bullet points. Guidance can be found in planner manual (Risk profiles &gt; risk profile considerations/assessment).</inlineHelpText>
    <label>Justify resistance to catastrophe</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>