force-app/main/default/objects/AdviceChecklist__c/fields/LastReviewDate__c.field-meta.xml
<CustomField>
    <fullName>LastReviewDate__c</fullName>
    <description>Date of last annual review</description>
    <label>Last review date</label>
    <type>Date</type>
</CustomField>