force-app/main/default/objects/AdviceChecklist__c/fields/Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Liabilities__c</fullName>
    <description>Use unclear</description>
    <label>Liabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>