force-app/main/default/objects/AdviceChecklist__c/fields/LiabilitiesCheck__c.field-meta.xml
<CustomField>
    <fullName>LiabilitiesCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liabilities</label>
    <type>Checkbox</type>
</CustomField>