force-app/main/default/objects/AdviceChecklist__c/fields/LiabilitySummary__c.field-meta.xml
<CustomField>
    <fullName>LiabilitySummary__c</fullName>
    <description>A summary of the clients liabilities at the point of creation of the advice checklist</description>
    <inlineHelpText>A summary of the clients liabilities at the point of creation of the advice checklist</inlineHelpText>
    <label>Liability Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>