force-app/main/default/objects/AdviceChecklist__c/fields/LifelineTimelineToBeModeled__c.field-meta.xml
<CustomField>
    <fullName>LifelineTimelineToBeModeled__c</fullName>
    <inlineHelpText>Use this to outline the LLs that will be provided (i.e. base vs advice) plus any client specific assumptions/deviations to the normal default assumptions. Onboarding cases should only have a base &amp; advice line as default. Additional modelling to be avoided where possible (can be covered in follow on advice/annual reviews as appropriate). This field must clearly set the partner&#39;s expectations for the modelling. Anything not outlined/agreed within this section cannot be changed once the deck is complete.</inlineHelpText>
    <label>Lifeline &amp; Timeline To Be Modeled</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>