force-app/main/default/objects/AdviceChecklist__c/fields/LinksToCfAndOrLtaCalcsAddedToSf__c.field-meta.xml
<CustomField>
    <fullName>LinksToCfAndOrLtaCalcsAddedToSf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Links to CF and/or LTA calcs added to Salesforce? 
Confirm added links to carry forward and/or LTA calcs to Salesforce supporting calculations, and saved in Research - Calculations of the advice folder</inlineHelpText>
    <label>Links to CF and/or LTA calcs added to SF</label>
    <type>Checkbox</type>
</CustomField>