force-app/main/default/objects/AdviceChecklist__c/fields/LinkToDeck__c.field-meta.xml
<CustomField>
    <fullName>LinkToDeck__c</fullName>
    <label>Link To Deck</label>
    <type>Url</type>
</CustomField>