force-app/main/default/objects/AdviceChecklist__c/fields/LinkToProtectionCalculation__c.field-meta.xml
<CustomField>
    <fullName>LinkToProtectionCalculation__c</fullName>
    <description>Google Drive link to calculations</description>
    <label>Link to protection calculation</label>
    <type>Url</type>
</CustomField>