force-app/main/default/objects/AdviceChecklist__c/fields/ListAssetsWhichCantBeTransferred__c.field-meta.xml
<CustomField>
    <fullName>ListAssetsWhichCantBeTransferred__c</fullName>
    <description>For use with in-specie transfers</description>
    <label>List assets which can&apos;t be transferred</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>