force-app/main/default/objects/AdviceChecklist__c/fields/ListConnectionsWithTheUsa1__c.field-meta.xml
<CustomField>
    <fullName>ListConnectionsWithTheUsa1__c</fullName>
    <description>US connections for the primary client</description>
    <inlineHelpText>If &#39;Yes&#39;, check facts (compliance &gt; US ties) for partner notes. Refer to partner/head of compliance if rationale for proceeding is not clear.</inlineHelpText>
    <label>List connections with the USA</label>
    <type>TextArea</type>
</CustomField>