force-app/main/default/objects/AdviceChecklist__c/fields/ListConnectionsWithTheUsa2__c.field-meta.xml
<CustomField>
    <fullName>ListConnectionsWithTheUsa2__c</fullName>
    <inlineHelpText>If &#39;Yes&#39;, check facts (compliance &gt; US ties) for partner notes. Refer to partner/head of compliance if rationale for proceeding is not clear.</inlineHelpText>
    <label>List Connections With The USA</label>
    <type>TextArea</type>
</CustomField>