force-app/main/default/objects/AdviceChecklist__c/fields/ManuallyEnterAdviceFeesToHubwise__c.field-meta.xml
<CustomField>
    <fullName>ManuallyEnterAdviceFeesToHubwise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Enter Advice Fees To Hubwise</label>
    <type>Checkbox</type>
</CustomField>