force-app/main/default/objects/AdviceChecklist__c/fields/MeetingLocation__c.field-meta.xml
<CustomField>
    <fullName>MeetingLocation__c</fullName>
    <description>Meeting location</description>
    <label>Meeting location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meeting_Location</valueSetName>
    </valueSet>
</CustomField>