force-app/main/default/objects/AdviceChecklist__c/fields/MeetingRecordingSavedToFileAsMp4__c.field-meta.xml
<CustomField>
    <fullName>MeetingRecordingSavedToFileAsMp4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Recording Saved To File As .MP4</label>
    <type>Checkbox</type>
</CustomField>